--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "colorpicker",
-  "version": "1.2.0",
-  "description": "Little application to get color code",
+  "productName": "colorpicker",
+  "version": "1.2.1",
+  "description": "Small app to get color code",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "build --dir",
+    "dist": "build"
   },
+  "build":{
+      "appId": "toinane.colorpicker",
+      "mac": {
+         "category": "toinane.app.design"
+      },
+      "win": {
+         "iconUrl": "logo.png"
+      }
+   },
   "repository": "https://github.com/toinane/colorpicker",
   "keywords": [
     "ColorPicker",
@@ -14,9 +26,9 @@
     "crea-that"
   ],
   "devDependencies": {
-    "electron": "^1.4.1"
+    "electron": "^1.5.0"
   },
   "author": "Toinane",
-  "homepage": "http://toinane.crea-th.at",
+  "homepage": "https://toinane.crea-th.at",
   "license": "CC0-1.0"
 }
