--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
   "name": "colorpicker",
   "productName": "colorpicker",
-  "version": "1.2.2",
-  "description": "Small app to get color code",
+  "version": "1.2.3",
+  "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "text": "xvfb-maybe electron-mocha main.js",
+    "test": "xvfb-maybe electron-mocha main.js",
     "pack": "build --dir",
-    "dist": "build"
-  },
-  "build": {
-    "appId": "toinane.colorpicker",
-    "mac": {
-      "category": "toinane.app.design"
-    },
-    "win": {
-      "iconUrl": "logo.png"
-    }
+    "build": "build --config electron-builder.json"
   },
   "repository": "https://github.com/toinane/colorpicker",
   "keywords": [
     "ColorPicker",
+    "colors",
+    "code",
+    "shading",
+    "picker",
     "Toinane",
     "Crea-THAT",
     "crea-that"
   ],
   "devDependencies": {
-    "electron": "^1.6.1"
+    "electron": "1.6.11",
+    "electron-builder": "19.6.3"
   },
   "author": "Toinane",
   "homepage": "https://toinane.crea-th.at",
-  "license": "CC0-1.0"
+  "license": "GNU GPLv3"
 }
