--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,36 +1,26 @@
-# Javascript Node CircleCI 2.0 configuration file
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
+      - image: circleci/node:8.2.1
     working_directory: ~/repo
-
     steps:
       - checkout
-
-      # Download and cache dependencies
+      - run:
+        name: update-npm
+        command: 'sudo npm install -g npm@latest'
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: npm install && npm rebuild
-
+          keys: dependency-cache-{{ checksum "package.json" }}
+      - run:
+        name: npm install
+        command: 'npm install -g node-gyp'
+      - run:
+        name: rebuild node-gyp
+        command: 'node-gyp rebuild'
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
+            - ./node_modules
       # run tests!
       - run: echo done
