--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,18 @@ jobs:
   build:
     docker:
       # documented at https://circleci.com/docs/2.0/circleci-images/
-      - image: circleci/node:8.2.1
+      - image: circleci/node:8.0.0
     working_directory: ~/repo
     steps:
       - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
+      # - run:
+      #     name: update-npm
+      #     command: 'sudo npm install -g npm@latest'
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: rm node_modules
-          command: 'npm rm'
+      # - run:
+      #     name: rm node_modules
+      #     command: 'npm rm'
       - run:
           name: npm install
           command: 'npm install -g node-gyp'
