feat(contextmenu): add new menu

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "electron-json-storage": "^3.0.7",
+    "electron-localshortcut": "^2.0.2",
     "robotjs": "^0.4.7"
   },
   "devDependencies": {
