--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "electron-json-storage": "^3.0.7",
+    "request": "^2.81.0",
     "robotjs": "^0.4.7"
   },
   "devDependencies": {
