feat(picker): use native module

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "electron-json-storage": "^3.0.7",
+    "iohook": "^0.1.9",
     "request": "^2.81.0",
     "robotjs": "^0.4.7"
   },
