--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "colorpicker",
-  "productName": "colorpicker",
-  "version": "1.4.0",
+  "name": "Colorpicker",
+  "productName": "Colorpicker",
+  "version": "1.5.0",
   "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
   "main": "src/main.js",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "repository": "https://github.com/toinane/colorpicker",
   "keywords": [
-    "ColorPicker",
+    "Colorpicker",
     "colors",
     "code",
     "shading",
