--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "electron src/main.js",
     "standard": "standard",
     "pack": "build --dir",
-    "build": "build --config colorpicker-build.json",
-    "build-linux": "build --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
-    "build-window": "build --config colorpicker-build.json --win nsis, portable",
+    "release": "build --config colorpicker-build.json",
+    "release-linux": "build --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
+    "release-window": "build --config colorpicker-build.json --win nsis, portable",
     "nightly": "build --config colorpicker-build-nightly.json",
     "nightly-linux": "build --config colorpicker-build-nightly.json --linux deb appImage",
     "rebuild": "npm rebuild --runtime=electron --target=1.7.8 --disturl=https://atom.io/download/atom-shell --abi=$(electron --abi)"
