--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "electron-json-storage": "^3.1.0",
     "request": "^2.81.0",
     "robotjs-shade": "git+https://github.com/jdan/robotjs.git",
-    "sortablejs": "^1.6.1"
+    "sortablejs": "^1.6.1",
+    "tippy.js": "^1.3.0"
   },
   "optionalDependencies": {
     "osx-mouse": "^1.2.1",
