--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "electron-json-storage": "^4.0.2",
     "request": "^2.83.0",
-    "robotjs-shade": "git+https://github.com/jdan/robotjs.git",
+    "robotjs": "git+https://github.com/toinane/robotjs.git",
     "sortablejs": "^1.7.0",
     "tippy.js": "^1.4.2"
   },
