--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "Colorpicker",
   "productName": "Colorpicker",
-  "version": "1.6.0",
+  "version": "2.0.0",
   "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
   "main": "src/main.js",
   "scripts": {
     "start": "npx electron src/main.js",
     "standard": "standard",
     "pack": "build --dir",
-    "release": "build --config colorpicker-build.json",
-    "release-linux": "build --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
-    "release-window": "build --config colorpicker-build.json --win nsis, portable",
-    "nightly": "build --config colorpicker-build-nightly.json",
-    "nightly-linux": "build --config colorpicker-build-nightly.json --linux deb appImage",
+    "release": "build --publish=never --config colorpicker-build.json",
+    "release-linux": "build --publish=never --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
+    "release-window": "build --publish=never --config colorpicker-build.json --win nsis, portable",
+    "nightly": "build --publish=never --config colorpicker-build-nightly.json",
+    "nightly-linux": "build --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
     "rebuild": "npm rebuild --runtime=electron --target=$(npx electron -v) --disturl=https://atom.io/download/electron --abi=$(npx electron --abi)"
   },
   "repository": "https://github.com/toinane/colorpicker",
@@ -31,16 +31,16 @@
     "request": "^2.83.0",
     "robotjs": "git+https://github.com/toinane/robotjs.git",
     "sortablejs": "^1.7.0",
-    "tippy.js": "^1.4.2"
+    "tippy.js": "^2.2.3"
   },
   "optionalDependencies": {
     "osx-mouse": "^1.2.1",
     "win-mouse": "^1.1.2"
   },
   "devDependencies": {
-    "electron": "1.7.10",
-    "electron-builder": "19.49.2",
-    "standard": "^10.0.3"
+    "electron": "1.8.2",
+    "electron-builder": "20.0.8",
+    "standard": "^11.0.0"
   },
   "author": {
     "name": "Toinane",
