--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
   "main": "src/main.js",
   "scripts": {
-    "start": "npx electron src/main.js",
+    "start": "tsc && electron built/main.js",
     "standard": "standard",
     "pack": "build --dir",
     "release": "build --publish=never --config colorpicker-build.json",
@@ -48,6 +48,6 @@
     "url": "https://toinane.crea-th.at"
   },
   "bugs": "https://github.com/toinane/colorpicker/issues",
-  "homepage": "https://crea-th.at/p/colorpicker",
+  "homepage": "https://colorpicker.crea-th.at",
   "license": "GPL-3.0"
 }
