--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}'
+      - run: 'npm i -g node-gyp'
       - run: 'npm i'
       - run: 'npm run rebuild'
       - save_cache:
@@ -23,6 +24,7 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}'
+      - run: 'npm i -g node-gyp'
       - run: 'npm i'
       - run: 'npm run rebuild'
       - save_cache:
@@ -38,6 +40,7 @@ jobs:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}'
+      - run: 'npm i -g node-gyp'
       - run: 'npm i'
       - run: 'npm run rebuild'
       - save_cache:
