--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,32 +14,32 @@ jobs:
           paths:
             - ./node_modules
           key: dependency-cache-{{ checksum "package.json" }}
-      - run: 'npm run release'
+      - run: 'sudo npm run release'
   'node-9':
     docker:
-      - image: circleci/node:8.0.0
+      - image: circleci/node:9.0.0
     working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}'
-      - run: 'sudo npm i -g node-gyp'
-      - run: 'sudo npm i'
-      - run: 'sudo npm run rebuild'
+      - run: 'sudo npm i -g node-gyp electron electron-builder'
+      - run: 'npm ci'
+      - run: 'npm run rebuild'
       - save_cache:
           paths:
             - ./node_modules
           key: dependency-cache-{{ checksum "package.json" }}
-      - run: 'sudo npm run release'
+      - run: 'npm run release'
   'node-10':
     docker:
-      - image: circleci/node:8.0.0
+      - image: circleci/node:10.0.0
     working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}'
-      - run: 'sudo npm i -g node-gyp'
+      - run: 'sudo npm i -g node-gyp electron electron-builder'
       - run: 'npm i'
       - run: 'npm run rebuild'
       - save_cache:
@@ -52,4 +52,5 @@ workflows:
   version: 2
   build:
     jobs:
-      - 'node-8'
+      - 'node-9'
+      - 'node-10'
