--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "standard": "standard",
     "pack": "build --dir",
     "release": "build --publish=never --config colorpicker-build.json",
-    "release-linux": "build --publish=never --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
+    "release-linux": "build --publish=never --config colorpicker-build.json --linux appImage",
     "release-window": "build --publish=never --config colorpicker-build.json --win nsis, portable",
     "nightly": "build --publish=never --config colorpicker-build-nightly.json",
     "nightly-linux": "build --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
