--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  linux:
+  'linux':
     docker:
       - image: circleci/node:8.12-stretch-browsers-legacy
     working_directory: ~/repo
@@ -17,7 +17,7 @@ jobs:
             - ./node_modules
           key: dependency-cache-{{ checksum "package.json" }}
       - run: 'npm run release-linux'
-  osx:
+  'osx':
     macos:
       - xcode: '9.0'
     working_directory: ~/repo
@@ -38,5 +38,5 @@ workflows:
   version: 2
   build:
     jobs:
-      - linux
-      - osx
+      - 'linux'
+      - 'osx'
