--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "electron-settings": "^3.1.4",
     "electron-json-storage": "^4.1.2",
     "request": "^2.88.0",
-    "electron-settings": "^3.1.4",
     "robotjs": "git+https://github.com/toinane/robotjs.git",
     "sortablejs": "^1.7.0",
     "tippy.js": "^2.6.0"
@@ -43,8 +42,7 @@
     "typescript": "^2.7.2",
     "electron": "1.8.8",
     "electron-builder": "20.28.4",
-    "standard": "^12.0.1",
-    "typescript": "^2.7.2"
+    "standard": "^12.0.1"
   },
   "author": {
     "name": "Toinane",
