--- a/package.json
+++ b/package.json
@@ -3,44 +3,55 @@
   "productName": "Colorpicker",
   "version": "3.0.0",
   "description": "Colorpicker is a little Electron app that can show colors with hex/rgb code, and generate shading for your color.",
-  "main": "src/main.js",
+  "main": "dist/Main.js",
   "scripts": {
-    "start": "tsc && electron dist/main.js",
-    "standard": "standard",
+    "postinstall": "npm run rebuild",
+    "build": "webpack",
+    "start": "npm run build && electron dist/main.js",
     "pack": "build --dir",
     "release": "build --publish=never --config colorpicker-build.json",
     "release:linux": "build --publish=never --config colorpicker-build.json --linux deb, apk, rpm, zip, appImage",
     "release:window": "build --publish=never --config colorpicker-build.json --win nsis, portable",
     "nightly": "build --publish=never --config colorpicker-build-nightly.json",
     "nightly:linux": "build --publish=never --config colorpicker-build-nightly.json --linux deb appImage",
-    "rebuild": "npm rebuild --runtime=electron --target=$(npx electron -v) --disturl=https://atom.io/download/electron --abi=$(npx electron --abi)"
+    "rebuild": "npm rebuild --runtime=electron --target=2.0.11 --disturl=https://atom.io/download/electron --abi=57"
   },
   "repository": "https://github.com/toinane/colorpicker",
   "keywords": [
-    "Colorpicker",
+    "colorpicker",
+    "electron",
+    "application",
     "colors",
-    "code",
+    "hexadecimal",
     "shading",
     "picker",
-    "Toinane",
-    "Crea-THAT",
+    "toinane",
     "crea-that"
   ],
   "dependencies": {
-    "electron-json-storage": "^4.1.2",
+    "electron-settings": "^3.2.0",
     "request": "^2.88.0",
     "robotjs": "git+https://github.com/toinane/robotjs.git",
     "sortablejs": "^1.7.0",
-    "tippy.js": "^2.6.0"
+    "tippy.js": "^3.0.6"
   },
   "optionalDependencies": {
     "osx-mouse": "^1.3.1",
     "win-mouse": "^1.2.0"
   },
   "devDependencies": {
+    "@types/electron-settings": "^3.1.1",
+    "copy-webpack-plugin": "^4.5.4",
     "electron": "2.0.11",
     "electron-builder": "20.28.4",
-    "standard": "^12.0.1"
+    "source-map-support": "^0.5.9",
+    "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.3",
+    "webpack": "^4.22.0",
+    "webpack-cli": "^3.1.2"
   },
   "author": {
     "name": "Toinane",
