--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "compileOnSave": true,
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
@@ -8,7 +9,8 @@
         "newLine": "LF",
         "noImplicitAny": false,
         "pretty": true,
-        "sourceMap": false,
+        "sourceMap": true,
+        "strict": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "removeComments": false,
