Fix CircleCI not finished
Fix the error that caused CircleCI to fail

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ jobs:
           paths:
             - ./node_modules
           key: dependency-cache-{{ checksum "package.json" }}
-      - run: 'npm run release-linux'
+      - run: 'npm run release:linux'
